fix sticky index.css problems caused by overflow-hidden. add new liquid-glass interface to cart. add compact mode to productcard to better display information in small places (e.g. custommer reocmmendations in cart/ productdetails)

--- a/front/src/index.css
+++ b/front/src/index.css
@@ -59,6 +59,6 @@
   }
 }
 html, body {
-  overflow-x: hidden;
+  overflow-x: clip;
   width: 100%;
 }
